[package]
name = "throwie-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inflate = "0.4.5"
influxdb = { version = "0.7.2", features = ["derive"] }
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
num = "0.4.1"
num_enum = "*"
thiserror = "*"
tokio = { version = "1.28.1", features = ["full", "socket2"] }
prost = "0.12.3"
prost-types = "0.12.3"
serde = "*"
serde_derive = "1.0.163"
toml = "0.8.10"
socket2 = { version = "0.5.6", features = ["all"] }
num_cpus = "1.16.0"
futures = "0.3.30"

[build-dependencies]
protobuf = "3.3.0"
protobuf-codegen = "3.3.0"
protoc-rust = "^2.0"
prost-build = "0.12.3"