[package]
name = "throwie-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inflate = "0.4.5"
influxdb = { version = "0.7.2", features = ["derive"] }
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
num = "0.4.1"
num_enum = "*"
thiserror = "*"
tokio = { version = "1.36.0", features = ["full", "socket2"] }
prost = "0.12.3"
prost-types = "0.12.3"
serde = "1.0.197"
serde_derive = "1.0.197"
toml = "0.8.10"
socket2 = { version = "0.5.6"}
num_cpus = "1.16.0"
dashmap = "5.5.3"
ringbuffer = "*"
sci-rs = { version = "0.3.15", features = ["std"] }

[build-dependencies]
protoc-rust = "2.28.0"
prost-build = "0.12.3"
